1) Created APIService Interface for calling APIs. 2) Created HeaderInterceptor class for setting up request header. 3) Created KotlinExtensions utility to enable helper functions in different activities. 4) Added a string to show message about network connectivity in strings.xml. 5) Added network permissions in manifest file to enable network checking.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">JSON-Feed</string>
+    <string name="internet_not_available">No internet connection. Close the Application, open Settings and reconnect to a cellular or wifi connection</string>
 </resources>
