--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">JSON-Feed</string>
     <string name="internet_not_available">No internet connection. Close the Application, open Settings and reconnect to a cellular or wifi connection</string>
+    <string name="harry_potter">Harry Potter</string>
+    <string name="jk_rowling">J. K. Rowling</string>
 </resources>
